# Newai-prime-2026

./: brain.py  build.yml  main.py  pyproject.toml  style.css  system_core.py
.github/workflows/: build.yml
src/newai_prime/: brain.core.py  brain.py  main.py  newai_users.json  sentinel_observer.py
