[tool.briefcase]
project_name = "Newai Prime"
bundle = "com.sametcan88.newai"
version = "1.0.1"
url = "https://github.com/Sametsnrl5645/Newai-Prime-2026"
[project]
license = { text = "MIT" }
author = "Samet Can 88"
author_email = "Sametsnrl5645@gmail.com"

[tool.briefcase.app.newai-prime]
formal_name = "Newai Prime"
description = "Sonsuz Bulut Hafızalı ve Tam Yetkili Siber Güvenlik Sistemi"
sources = ["src/newai_prime"]

# 🔱 GÖRSEL MÜHÜRLERİN YOLLARI (Burayı güncelle)
icon = "src/newai_prime/icon"  # Uzantı (.png) yazmana gerek yok, BeeWare kendi bulur
splash_screen = "src/newai_prime/splash_screen"

# 🔱 ÇEKİRDEK BAĞIMLILIKLAR
requires = [
    "toga-android",
    "groq",
    "httpx",
    "certifi",
]

[tool.briefcase.app.newai-prime.macOS]
requires = ["toga-cocoa"]

[tool.briefcase.app.newai-prime.linux]
requires = ["toga-gtk"]

[tool.briefcase.app.newai-prime.windows]
requires = ["toga-winforms"]

[tool.briefcase.app.newai-prime.android]
build_variant = "release"
# 🔱 SENİN EKLEDİĞİN TAM YETKİ LİSTESİ (Hatasız Format)
permissions = [
    "INTERNET",
    "ACCESS_NETWORK_STATE",
    "WRITE_EXTERNAL_STORAGE",
    "READ_EXTERNAL_STORAGE",
    "CAMERA",
    "RECORD_AUDIO",
    "MODIFY_AUDIO_SETTINGS",
    "ACCESS_COARSE_LOCATION",
    "ACCESS_FINE_LOCATION",
    "BLUETOOTH",
    "BLUETOOTH_ADMIN",
    "BLUETOOTH_CONNECT",
    "BLUETOOTH_SCAN",
    "READ_MEDIA_IMAGES",
    "READ_MEDIA_VIDEO",
    "READ_MEDIA_AUDIO",
    "MANAGE_EXTERNAL_STORAGE",
]

# 🔱 ASİSTAN PROTOKOLÜ
extra_manifest_attributes = { "android:permission" = "android.permission.BIND_ASSISTANT" }
